--- a/Vinobaje_Manohar_Assingment_3/Vinobaje_Manohar_Assingment_3.csproj
+++ b/Vinobaje_Manohar_Assingment_3/Vinobaje_Manohar_Assingment_3.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Planet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TerrestriaPlanet.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
